SFDC Automation/src/objects/Deal_Summary__c.object
<CustomObject>
    <fields>
        <fullName>EVA__c</fullName>
        <label>EVA</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue__c</fullName>
        <label>Gross Revenue</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Include_In_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_EVA__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include in EVA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Vehicles__c</fullName>
        <label># of Vehicles</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Summaries</relationshipLabel>
        <relationshipName>Deal_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ext_dealsummary_id__c</fullName>
        <externalId>true</externalId>
        <label>ext_dealsummary_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Deal Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deal Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_UpdatesOnDealSummary</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Name) || ISCHANGED(ext_dealsummary_id__c) ||  ISCHANGED(Status__c) || ISCHANGED( EVA__c) || ISCHANGED(No_of_Vehicles__c) || ISCHANGED(Gross_Revenue__c))  &amp;&amp; AND(NOT($Profile.Name = &apos;System Administrator&apos;), NOT($Profile.Name = &apos;SSO System Administrator&apos;), NOT($Profile.Name = &apos;Business Admin&apos;), NOT($Profile.Name = &apos;Business Admin Non SSO&apos;), NOT($Profile.Name = &apos;Business Support&apos;))</errorConditionFormula>
        <errorMessage>No changes are allowed on this page. if you are trying to update the Include in Quote, please go to the Opportunity Details Page. For any other updates, go to Radar using the Edit in Radar link on the Opportunity Details Page.</errorMessage>
    </validationRules>
</CustomObject>